--- a/estilo/style.css
+++ b/estilo/style.css
@@ -98,3 +98,23 @@ footer {
     text-align: center;
     padding: 10px;
 }
+
+a.voltar-ao-topo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #007bff56; /* Cor de fundo do botão */
+    color: rgba(255, 255, 255, 0.507);
+    padding: 12px 16px;
+    border-radius: 50%; /* Torna o botão redondo */
+    text-align: center;
+    font-size: 16px;
+    z-index: 999; /* Coloca o botão acima dos demais elementos */
+    text-decoration: none;
+}
+
+a.voltar-ao-topo:hover {
+    color: white;
+    background-color: #0056b3; /* Cor de fundo do botão ao passar o mouse */
+    transition: 0.5s;
+}
